--- a/src/scss/_purpose.scss
+++ b/src/scss/_purpose.scss
@@ -14,6 +14,7 @@
 
   .belief {
     @include grid-row();
+    @include grid-column($columns:12);
     margin-bottom: rem-calc(40px);
 
     aside {
